# snpguest

./: .Cargo.toml.un~  Cargo.toml  Cargo.toml~  README  README.md
.github/: auto_assign-issues.yml  auto_assign.yml
.github/workflows/: check-and-lint.yaml  create_release.yml  dco.yml  docs.yml  gha_VirTEE.yaml  lint.yml  release-packaging.yaml  rust.yml  snpguest-ci-pr-test.yaml  snpguest_ci_pr_test.yaml  test.yml
docs/: snpguest.1.adoc
src/: certs.rs  display.rs  fetch.rs  key.rs  main.rs  ok.rs  preattestation.rs  report.rs  request.rs  verify.rs
src/certs/: mod.rs
src/clparser/: mod.rs
src/guest/: mod.rs
src/hyperv/: .mod.rs.swp  .mod.rs.un~  check.rs  mod.rs  report.rs  tpm.rs
