[package]
name = "snpguest"
version = "0.2.2"
authors = ["The VirTEE Project Developers"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/virtee/snpguest"
repository = "https://github.com/virtee/snpguest"
description = "Navigation utility for AMD SEV-SNP guest environment"
readme = "README.md"
keywords = ["amd", "sev", "sev-snp", "snp"]
exclude = [ ".gitignore", ".github/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
env_logger = "0.10.0"
anyhow = "1.0.69"
sev = { version = "^1.2", default-features = false, features = ['openssl','snp']}
nix = "^0.23"
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.2.1"
openssl = { version = "^0.10", features = ["vendored"]}
reqwest = { version="0.11.10", features = ["blocking"] }
hex = "0.4"
x509-parser = { version="^0.14", features=["verify"] }
asn1-rs = "*"
rand = "*"
