[package]
name = "snpguest"
version = "0.10.0"
authors = ["The VirTEE Project Developers"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/virtee/snpguest"
repository = "https://github.com/virtee/snpguest"
description = "Navigation utility for AMD SEV-SNP guest environment"
readme = "README.md"
keywords = ["amd", "sev", "sev-snp", "snp"]
exclude = [ ".gitignore", ".github/*" ]
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
hyperv = ["tss-esapi"]

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
env_logger = "0.10.0"
anyhow = "1.0.69"
sev = { version = "=7.1.0", default-features = false, features = ['openssl','snp']}
nix = "^0.23"
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.2.1"
openssl = { version = "^0.10", features = ["vendored"]}
reqwest = { version="=0.11.10", features = ["blocking"] }
hex = "0.4"
x509-parser = { version="=0.16.0", features=["verify"] }
asn1-rs = "=0.6.2"
rand = "0.8.5"
tss-esapi = { version = "7.2", optional=true }
msru = "0.2.0"
colorful = "0.2.2"
bitfield = "0.15.0"
clap-num = "1.1.1"
base64 = "0.22.1"
